--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "prettier --write 'app/**/*.js'"
+    "prettier": "prettier --write 'app/**/*.js'",
+    "api-server": "json-server --watch --port 4000 ./_data/db.json"
   },
   "dependencies": {
     "autoprefixer": "10.4.16",
