--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "api-server": "json-server --watch --port 4000 ./_data/db.json"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.8.7",
+    "@supabase/supabase-js": "^2.38.4",
     "autoprefixer": "10.4.16",
     "eslint-config-next": "14.0.1",
     "next": "14.0.1",
