--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "tailwindcss": "3.3.5"
   },
   "devDependencies": {
+    "encoding": "^0.1.13",
     "eslint": "^8.53.0",
     "prettier": "3.0.3"
   }
